--- a/Windows/ClientPage.xaml
+++ b/Windows/ClientPage.xaml
@@ -44,20 +44,20 @@
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
                         <StackPanel Margin="10">
-                            <TextBlock FontFamily="Verdana" FontWeight="Bold" Text="Название:"/>
-                            <TextBlock Text="{Binding Color}"/>
+                            <TextBlock FontFamily="Verdana" FontWeight="Bold" Text="Имя клиента:"/>
+                            <TextBlock Text="{Binding Name}"/>
                         </StackPanel>
                         <StackPanel Margin="10" >
-                            <TextBlock FontFamily="Verdana" FontWeight="Bold" Text="Тип ручки:"/>
-                            <TextBlock Text="{Binding TypePen.Name}"/>
+                            <TextBlock FontFamily="Verdana" FontWeight="Bold" Text="Логин:"/>
+                            <TextBlock Text="{Binding Login}"/>
                         </StackPanel>
                         <StackPanel Margin="10">
-                            <TextBlock FontFamily="Verdana" FontWeight="Bold" Text="Производитель:"/>
-                            <TextBlock Text="{Binding Company.Name}"/>
+                            <TextBlock FontFamily="Verdana" FontWeight="Bold" Text="Пароль"/>
+                            <TextBlock Text="{Binding Password}"/>
                         </StackPanel>
                         <StackPanel Margin="10">
-                            <TextBlock FontFamily="Verdana" FontWeight="Bold" Text="Цена:"/>
-                            <TextBlock Text="{Binding Price}"/>
+                            <TextBlock FontFamily="Verdana" FontWeight="Bold" Text="Тип клиента:"/>
+                            <TextBlock Text="{Binding Types.Name}"/>
                         </StackPanel>
                     </StackPanel>
                 </DataTemplate>
@@ -65,6 +65,52 @@
         </ListView>
 
         <Button Grid.Column="4" Grid.Row="9" Grid.ColumnSpan="2" Margin="10" Content="Удалить" Click="ClientDeleteBTN"/>
+
+        <Label Grid.Row="2" Grid.Column="2" Content="Поиск" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
+
+        <TextBox Grid.Row="3" Grid.Column="2" Name="TBSourch" TextWrapping="Wrap" 
+                 Margin="5" TextChanged="TextBox_TextChanged"/>
+
+        <Label Grid.Row="2" Grid.Column="8" 
+               HorizontalAlignment="Center"  VerticalAlignment="Bottom" 
+               Content="Имя" FontSize="14" FontFamily="Verdana" FontWeight="Bold" />
+
+        <TextBox Grid.Row="3" Grid.Column="8" TextWrapping="Wrap" Name="TBN" Margin="5"
+                 HorizontalContentAlignment="Left" VerticalContentAlignment="Center" FontSize="14"/>
+
+        <Label Grid.Row="4" Grid.Column="8" 
+               HorizontalAlignment="Center"  VerticalAlignment="Bottom" 
+               Content="Логин" FontSize="14" FontFamily="Verdana" FontWeight="Bold" />
+
+        <TextBox Grid.Row="5" Grid.Column="8" Name="TBL" TextWrapping="Wrap" Margin="5"
+                 HorizontalContentAlignment="Left" VerticalContentAlignment="Center" FontSize="14"/>
+
+        <Label Grid.Row="4" Grid.Column="9" 
+               HorizontalAlignment="Center"  VerticalAlignment="Bottom" 
+               Content="Пароль" FontSize="14" FontFamily="Verdana" FontWeight="Bold"/>
+
+        <TextBox Grid.Row="5" Grid.Column="9" Name="TBP" TextWrapping="Wrap" Margin="5"
+                 HorizontalContentAlignment="Left" VerticalContentAlignment="Center" FontSize="14"/>
+
+        <Label Grid.Row="2" Grid.Column="9" 
+               HorizontalAlignment="Center"  VerticalAlignment="Bottom" 
+               FontSize="14" FontFamily="Verdana" FontWeight="Bold">
+            <Label.Content>
+                <TextBlock Text="Тип клиента" TextWrapping="Wrap"/>
+            </Label.Content>
+        </Label>
+
+        <ComboBox Grid.Row="3" Grid.Column="9" Margin="5" Name="CBType">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock x:Name="TBTypeClient" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Verdana" FontWeight="Bold" Text="{Binding Name}" />
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+
+        <Button Grid.Row="7" Grid.Column="8" Grid.ColumnSpan="2" Margin="5"
+                Click="RegBtn" Content="Регистрация" FontSize="14"
+                FontFamily="Verdana" FontWeight="Bold"/>
 
     </Grid>
 </Page>
