--- a/Windows/ClientPage.xaml
+++ b/Windows/ClientPage.xaml
@@ -64,7 +64,7 @@
             </ListView.ItemTemplate>
         </ListView>
 
-        <Button Grid.Column="4" Grid.Row="9" Grid.ColumnSpan="2" Margin="10" Content="Удалить" Click="ClientDeleteBTN"/>
+        <Button Grid.Column="4" Grid.Row="9" Grid.ColumnSpan="2" Margin="10" Content="Удалить" Click="ClientDeleteBTN" FontFamily="Verdana" FontWeight="Bold"/>
 
         <Label Grid.Row="2" Grid.Column="2" Content="Поиск" VerticalAlignment="Bottom" HorizontalAlignment="Center"/>
 
@@ -109,7 +109,7 @@
         </ComboBox>
 
         <Button Grid.Row="7" Grid.Column="8" Grid.ColumnSpan="2" Margin="5"
-                Click="RegBtn" Content="Регистрация" FontSize="14"
+                Click="RegBtn" Content="Добавить" FontSize="14"
                 FontFamily="Verdana" FontWeight="Bold"/>
 
     </Grid>
