--- a/Windows/OrderPage.xaml
+++ b/Windows/OrderPage.xaml
@@ -66,7 +66,49 @@
 
         <Button Grid.Column="4" Grid.Row="9" Grid.ColumnSpan="2" Margin="10" Content="Удалить" Click="OrderDeleteBTN"/>
 
-        
-        
+        <Label Grid.Column="7" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Bottom" Content="Введите дату" Grid.ColumnSpan="2" Margin="45,0,0,0"/>
+
+        <Calendar Grid.Column="7" Grid.RowSpan="3" Grid.Row="3" Grid.ColumnSpan="2" x:Name="CalenCB" />
+
+        <Label Grid.Column="9" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Bottom">
+            <Label.Content>
+                <TextBlock TextWrapping="Wrap" Text="Введите количество"/>
+            </Label.Content>
+        </Label>
+
+        <TextBox Grid.Column="9" Grid.Row="3" Margin="5" Name="TBA"/>
+
+        <Label Grid.Column="8" Grid.Row="6" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="7,8,0,0">
+            <Label.Content>
+                <TextBlock TextWrapping="Wrap" Text="Номер ручки" Width="73" ></TextBlock>
+            </Label.Content>
+        </Label>
+
+        <ComboBox Grid.Row="7" Grid.Column="8" Name="CBPen" Margin="5,5,5,5">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Verdana" FontWeight="Bold" Text="{Binding Id_pen}" />
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+
+        <Label Grid.Column="9" Grid.Row="6" VerticalAlignment="Center">
+            <Label.Content>
+                <TextBlock TextWrapping="Wrap" Text="Выберите номер клиента" ></TextBlock>
+            </Label.Content>
+        </Label>
+
+        <ComboBox Grid.Row="7" Grid.Column="9" Name="CBCLient" Margin="4,5,6,5">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Verdana" FontWeight="Bold" Text="{Binding Id_client}" />
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+
+        <Button Grid.Column="8" Grid.Row="9" Grid.ColumnSpan="2" Content="Добавить" Margin="10" FontFamily="Verdana" FontWeight="Bold" Click="OrderADDBTN"/>
+
+        <Button Grid.Column="4" Grid.Row="9" Grid.ColumnSpan="2" Margin="10" Content="Удалить" Click="OrderDeleteBTN" FontFamily="Verdana" FontWeight="Bold"/>
+
     </Grid>
 </Page>
