--- a/Windows/AuthWindow.xaml
+++ b/Windows/AuthWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="PenStore.Windows.RegWindow"
+﻿<Window x:Class="PenStore.Windows.AuthWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PenStore.Windows"
         mc:Ignorable="d" MinHeight="500" MinWidth="300"
-        Title="RegWindow" Height="500" Width="300">
+        Title="AuthWindow" Height="500" Width="300">
     <Grid>
 
         <Grid.ColumnDefinitions>
@@ -33,12 +33,6 @@
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <Label Grid.Column="4" Grid.ColumnSpan="2" 
-               HorizontalAlignment="Center"  VerticalAlignment="Center" 
-               Content="Имя" FontSize="20" FontFamily="Verdana" FontWeight="Bold"/>
-
-        <TextBox Grid.Row="1" Grid.Column="2" Grid.ColumnSpan="6" TextWrapping="Wrap" Name="TBN"
-                 HorizontalContentAlignment="Left" VerticalContentAlignment="Center" FontSize="14"/>
 
         <Label Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="6" 
                HorizontalAlignment="Center"  VerticalAlignment="Center" 
@@ -54,20 +48,12 @@
         <TextBox Grid.Row="5" Grid.Column="2" Grid.ColumnSpan="6" Name="TBP" TextWrapping="Wrap"
                  HorizontalContentAlignment="Left" VerticalContentAlignment="Center" FontSize="14"/>
 
-        <Label Grid.Row="6" Grid.Column="2" Grid.ColumnSpan="6" 
-               HorizontalAlignment="Center"  VerticalAlignment="Center" 
-               Content="Тип клиента" FontSize="20" FontFamily="Verdana" FontWeight="Bold"/>
+        <Button Grid.Row="7" Grid.Column="2" Grid.ColumnSpan="6" Margin="5"
+                Content="Авторизация" FontSize="16" Click="AuthBTN"
+                FontFamily="Verdana" FontWeight="Bold"/>
 
-        <ComboBox Grid.Row="7" Grid.Column="2" Grid.ColumnSpan="6" Name="CBType">
-            <ComboBox.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock x:Name="TBTypeClient" HorizontalAlignment="Left" VerticalAlignment="Center" FontFamily="Verdana" FontWeight="Bold" Text="{Binding Name}" />
-                </DataTemplate>
-            </ComboBox.ItemTemplate>
-        </ComboBox>
-
-        <Button Grid.Row="8" Grid.Column="2" Grid.ColumnSpan="6" Grid.RowSpan="2" Margin="20"
-                Click="RegBtn" Content="Регистрация" FontSize="16"
+        <Button Grid.Row="8" Grid.Column="2" Grid.ColumnSpan="6" Margin="5"
+                Content="Регистрация" FontSize="16" Click="ReqWindows"
                 FontFamily="Verdana" FontWeight="Bold"/>
 
     </Grid>
