--- a/Windows/AuthWindow.xaml
+++ b/Windows/AuthWindow.xaml
@@ -3,8 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PenStore.Windows"
-        mc:Ignorable="d" MinHeight="500" MinWidth="300"
+        xmlns:local="clr-namespace:PenStore.Windows"  WindowStyle="None"
+        mc:Ignorable="d" MinHeight="500" MinWidth="300" MaxHeight="1000" MaxWidth="600"
         Title="AuthWindow" Height="500" Width="300">
     <Grid>
 
@@ -54,6 +54,10 @@
 
         <Button Grid.Row="8" Grid.Column="2" Grid.ColumnSpan="6" Margin="5"
                 Content="Регистрация" FontSize="16" Click="ReqWindows"
+                FontFamily="Verdana" FontWeight="Bold"/>
+
+        <Button Grid.Column="9" Margin="5"
+                Content="Х" FontSize="14" Click="ExitBTN"
                 FontFamily="Verdana" FontWeight="Bold"/>
 
     </Grid>
