--- a/Windows/RegWindow.xaml
+++ b/Windows/RegWindow.xaml
@@ -3,8 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PenStore.Windows"
-        mc:Ignorable="d" MinHeight="500" MinWidth="300"
+        xmlns:local="clr-namespace:PenStore.Windows" 
+        mc:Ignorable="d" MinHeight="500" MinWidth="300" MaxHeight="1000" MaxWidth="600"
         Title="RegWindow" Height="500" Width="300">
     <Grid>
 
@@ -68,6 +68,10 @@
 
         <Button Grid.Row="8" Grid.Column="2" Grid.ColumnSpan="6" Grid.RowSpan="2" Margin="20"
                 Click="RegBtn" Content="Регистрация" FontSize="16"
+                FontFamily="Verdana" FontWeight="Bold"/>
+
+        <Button Grid.Column="9" Margin="5"
+                Content="Х" FontSize="14" Click="ExitBTN"
                 FontFamily="Verdana" FontWeight="Bold"/>
 
     </Grid>
