--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -4,8 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PenStore"
-        xmlns:vm="clr-namespace:PenStore.ViewsModel"
-        mc:Ignorable="d" MinHeight="450" MinWidth="800" WindowStyle="None"
+        xmlns:vm="clr-namespace:PenStore.ViewsModel" WindowStyle="None"
+        mc:Ignorable="d" MinHeight="450" MinWidth="800" WindowStartupLocation="CenterScreen"
         Title="MainWindow" Height="500" Width="900">
     <Window.DataContext>
         <vm:MainViewPages/>
