--- a/Windows/PenPage.xaml
+++ b/Windows/PenPage.xaml
@@ -39,7 +39,7 @@
                HorizontalAlignment="Center"  VerticalAlignment="Center" 
                Content="Ассортимент ручек" FontSize="12" FontFamily="Verdana" FontWeight="Bold" />
 
-        <ListView Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="4" Grid.RowSpan="6" Name="LVPen">
+        <ListView Grid.Row="3" Grid.Column="3" Grid.ColumnSpan="4" Grid.RowSpan="6" Name="LVPen" MouseDoubleClick="LVPen_MouseDoubleClick">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
