--- a/Windows/RegWindow.xaml
+++ b/Windows/RegWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:PenStore.Windows" 
+        xmlns:local="clr-namespace:PenStore.Windows" WindowStartupLocation="CenterScreen"
         mc:Ignorable="d" MinHeight="500" MinWidth="300" MaxHeight="1000" MaxWidth="600"
         Title="RegWindow" Height="500" Width="300">
     <Grid>
